# sawtooth-poet

./: .dockerignore  .gitignore  BUILD.md  CONTRIBUTING.md  Jenkinsfile  MAINTAINERS.md  NOTICES  README.md  build_sgx_binary.sh  clippy-poet.yaml  clippy-poet2.dockerfile  clippy-poet2.yaml  copy-debs.yaml  demo3.yaml  demo5.yaml  docker-compose-3-nodes.yaml  docker-compose-5-nodes.yaml  docker-compose-installed.yaml  docker-compose-sgx-hw.yaml  docker-compose.yaml  docker-poet-build.yaml  docker-poet-hw-build.yaml  ias-client.dockerfile  ias-proxy.dockerfile  lint.dockerfile  poet-sgx-engine.dockerfile  poet2-validator.dockerfile  run-lint.yaml  unit-poet2.yaml  validator-registry-tp.dockerfile  validator-tp-compose.yaml
.github/: settings.yml
ci/: bandit  copy-debs.yaml  lint  run-lint.yaml  sawtooth-build-docs  sawtooth-poet-engine  sawtooth-poet-validator-registry-tp
ci/nightly/: sawtooth-poet-engine  sawtooth-poet-validator-registry-tp
cli/: Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  setup.py
cli/sawtooth_poet_cli/: poet_enclave_module_wrapper.py  registration.py
cli/tests/: poet-cli-tests.dockerfile  unit_poet_cli.yaml
cli/tests/test_genesis/: tests.py
common/: Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  setup.py
common/sawtooth_poet_common/sgx_structs/: _sgx_attributes.py  _sgx_basename.py  _sgx_cpu_svn.py  _sgx_key_id.py  _sgx_measurement.py  _sgx_quote.py  _sgx_report.py  _sgx_report_body.py  _sgx_report_data.py  _sgx_struct.py
common/tests/: poet-common-tests.dockerfile  unit_poet_common.yaml
core/: Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  setup.py
core/sawtooth_poet/config/: path.py
core/sawtooth_poet/database/: lmdb_nolock_database.py
core/sawtooth_poet/poet_consensus/: consensus_state.py  consensus_state_store.py  poet_block_publisher.py  (+4 more)
core/src/: engine.rs
core/tests/: poet-core-tests.dockerfile  unit_poet_core.yaml
docs/: Makefile
docs/source/: architecture.rst  cli.rst  contents.rst  sysadmin_guide.rst
engine/: Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  setup.py
engine/sawtooth_poet_engine/: engine.py  main.py  oracle.py  pending.py
families/: Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  setup.py  stdeb.cfg
families/sawtooth_validator_registry/validator_registry/: .rustfmt.toml  Cargo.toml  build.rs
families/sawtooth_validator_registry/validator_registry/processor/: handler.py
families/sawtooth_validator_registry/validator_registry/src/: main.rs  protos.rs  validator_registry_tp_handler.rs  validator_registry_tp_verifier.rs
families/sawtooth_validator_registry/validator_registry/src/sgx_structs/: mod.rs  sgx_attributes.rs  sgx_basename.rs  sgx_cpu_svn.rs  sgx_measurement.rs  sgx_quote.rs  sgx_report_body.rs  sgx_report_data.rs  sgx_struct_error.rs  sgx_struct_serde.rs
families/tests/: test_tp_validator_registry.py  test_tp_validator_registry.yaml  tp-validator-registry-tests.dockerfile  validator_reg_message_factory.py
ias_client/: Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  setup.py
ias_client/sawtooth_ias_client/: ias_client.py
ias_client/tests/: ias-client-tests.dockerfile  unit_ias_client.yaml
ias_proxy/: Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  setup.py
ias_proxy/packaging/: ias_proxy.toml.example
ias_proxy/sawtooth_ias_proxy/: ias_proxy.py
packaging/systemd/: sawtooth-poet  sawtooth-poet.service  sawtooth-poet2  sawtooth-poet2.service
packaging/ubuntu/: postinst  postint
sgx/: Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  setup.py
sgx/packaging/: poet_enclave_sgx.toml.example
simulator/: Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  setup.py
simulator/tests/: poet-simulator-tests.dockerfile  unit_poet_simulator.yaml
src/core/: Cargo.toml  Dockerfile-installed  README.md
src/core/src/: enclave_sgx.rs  main.rs  poet2_util.rs  poet_config.rs  registration.rs  service.rs  settings_view.rs  validator_registry_view.rs
src/core/src/database/: config.rs  lmdb.rs  mod.rs
src/core/src/engine/: check_consensus.rs  consensus_state.rs  consensus_state_store.rs  fork_resolver.rs  mod.rs
src/core/src/resources/: poet_config.toml
src/core/src/tests/resources/: dummy_file.txt
src/ias_client/: Cargo.toml
src/ias_client/src/: client_utils.rs  ias_client.rs  lib.rs
src/ias_client/src/tests/resources/: dummy_cert.pfx
src/ias_proxy/: Cargo.toml
src/ias_proxy/src/: ias_proxy_config.rs  ias_proxy_server.rs  lru_cache.rs  main.rs  utils.rs
src/ias_proxy/src/tests/: dummy_cert.pem  dummy_file.txt
src/ias_proxy/src/tests/packaging/: ias_proxy.toml
src/sgx/: CMakeLists.txt  README.md
src/sgx/common/c11_support/: CMakeLists.txt
src/sgx/common/c11_support/linux/: c11_support.cpp  c11_support.h
src/sgx/rust_sgx_bridge/: CMakeLists.txt  rust_sgx_bridge.cpp  rust_sgx_bridge.h
src/sgx/rust_sgxffi/: CMakeLists.txt  Cargo.toml  build.rs
src/sgx/rust_sgxffi/src/: ffi.rs  lib.rs
src/validator-registry-tp/: Cargo.toml  build.rs
src/validator-registry-tp/src/: lib.rs  main.rs  validator_registry_payload.rs  validator_registry_signup_info.rs  validator_registry_tp.rs  validator_registry_validator_info.rs  validator_registry_validator_map.rs
src/validator-registry-tp/src/sgx/: validator_registry_tp_verifier.rs
src/validator-registry-tp/src/simulator/: validator_registry_tp_verifier.rs
tests/: Dockerfile  Dockerfile-bumper  Dockerfile-installed  Dockerfile-tests-installed  setup.py  unit-ias-client.yaml  unit-ias-proxy.yaml  unit-poet.yaml  unit-poet2.yaml
tests/sawtooth_poet_tests/: node_controller.py  test_dynamic_network.py  test_dynamic_network.yaml  test_poet_liveness.yaml  test_poet_liveness_bumper.yaml  test_poet_liveness_core.yaml  test_systemd.sh  test_systemd_services.yaml
(+73 files in other folders)
