[package]
name = "sawtooth-poet2"
version = "0.1.0"
authors = ["Intel Corporation"]

[dependencies]
sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git", rev="7ac644d" }
rand = "0.4.2"
log = "0.4.5"
log4rs = "0.8.1"
protobuf="2.0"
zmq = { git = "https://github.com/erickt/rust-zmq", branch = "release/v0.8" }
num = "0.1.42"
lazy_static = "1.0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "~2.27.0"
lmdb-zero = ">=0.4.1"
rust-crypto = "^0.2"
bincode = "1.0.1"
rust_sgxffi = { path = "../sgx/rust_sgxffi"}

[package.metadata.deb]
assets = [
    ["../../packaging/systemd/sawtooth-poet2.service", "/lib/systemd/system/sawtooth-poet2.service", "644"],
    ["../../packaging/systemd/sawtooth-poet2", "/etc/default/sawtooth-poet2", "644"],
    ["target/release/sawtooth-poet2", "usr/bin/", "755"],
    ["../build/bin/librust_sgx_bridge.so", "usr/lib/", "755"],
    ["../build/bin/libsgxffi.so", "usr/lib/", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_capable.so", "usr/lib/", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_ptrace.so", "usr/lib/", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_uae_service.so", "usr/lib/", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_uae_service_sim.so", "usr/lib/", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_urts.so", "usr/lib/", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_urts_sim.so", "usr/lib/", "755"],
    ["../build/bin/libpoet_enclave.signed.so", "usr/lib/", "755"],
    ["../build/lib/libpoet_enclave.so", "usr/lib/", "755"],
]
maintainer-scripts = "../../packaging/ubuntu"
