[package]
name = "sawtooth-poet"
version = "0.1.0"
authors = ["Intel Corporation"]

[dependencies]
sawtooth-sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" }
rand = "0.4.2"
log = "0.4.5"
log4rs = "0.8.1"
protobuf="2.0"
sawtooth-zmq = "0.8.2-dev5"
num = "0.1.42"
lazy_static = "1.0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "~2.27.0"
lmdb-zero = ">=0.4.1"
rust-crypto = "^0.2"
bincode = "1.0.1"
rust_sgxffi = { path = "../sgx/rust_sgxffi"}
validator_registry_tp = { path = "../validator-registry-tp" }

[package.metadata.deb]
maintainer = "sawtooth"
depends = "$auto,rsyslog"
assets = [
    ["../../packaging/systemd/sawtooth-poet.service", "/lib/systemd/system/sawtooth-poet.service", "644"],
    ["../../packaging/systemd/sawtooth-poet", "/etc/default/sawtooth-poet", "644"],
    ["target/release/sawtooth-poet", "/usr/bin/sawtooth-poet", "755"],
    ["../build/bin/librust_sgx_bridge.so", "/usr/lib/librust_sgx_bridge.so", "755"],
    ["../build/bin/libsgxffi.so", "/usr/lib/libsgxffi.so", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_capable.so", "/usr/lib/libsgx_capable.so", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_ptrace.so", "/usr/lib/libsgx_ptrace.so", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_uae_service.so", "/usr/lib/libsgx_uae_service.so", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_uae_service_sim.so", "/usr/lib/libsgx_uae_service_sim.so", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_urts.so", "/usr/lib/libsgx_urts.so", "755"],
    ["/tmp/sgxsdk/lib64/libsgx_urts_sim.so", "/usr/lib/libsgx_urts_sim.so", "755"],
    ["../build/bin/libpoet_enclave.signed.so", "/usr/lib/libpoet_enclave.signed.so", "755"],
    ["../build/lib/libpoet_enclave.so", "/usr/lib/libpoet_enclave.so", "755"],
]
maintainer-scripts = "../../packaging/ubuntu"
