# Copyright 2018 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "validator_registry_tp"
version = "1.0.0"
authors = ["Intel Corporation"]

[dependencies]
sawtooth-sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" }
log = "0.3.0"
log4rs = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "~2.27.0"
rust-crypto = "0.2.36"
protobuf = "2.0"
openssl = "0.10.15"
base64 = "0.10.0"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"
cfg-if = "0.1"

[lib]
# The name of a target is the name of the library that will be generated.
name = "validator_registry_tp"

# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib.rs"

# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true

[[bin]]
# The name of binary created, note ias_proxy is a binary
name = "validator_registry_tp"

# This field point where the binary can be built (place of main)
path = "src/main.rs"
